<resources>
    <string name="app_name">BathRoam</string>
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_create">Create</string>
    <string name="title_settings">Settings</string>
    <string name="title_submit">Submit</string>
    <string name="title_handle">Name</string>
    <string name="title_comment">Comment</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="bathroom_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Neutral</item>
    </string-array>
    <string name="gender">alskfjlak</string>

    <string-array name="bathroom_arrays2">
        <item>Public</item>
        <item>Non-Public</item>
    </string-array>
    <string name="gender2">yuioyio</string>

</resources>
