<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.austin.menu.ItemTwoFragment">


    <TextView
        android:id="@+id/textDummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text=""
        android:textSize="30sp" />

    <LinearLayout         android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_alignTop="@+id/textView"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="50dp"
            android:entries="@array/bathroom_arrays"
            android:prompt="@string/gender" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_alignTop="@+id/textView"
            android:layout_marginLeft="225dp"
            android:layout_marginTop="-25dp"
            android:entries="@array/bathroom_arrays2"
            android:prompt="@string/gender2" />






    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="Name This Bathroom"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:ems="17"
        android:hint="@string/title_handle"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Comments"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginTop="205dp"
        android:ems="17"
        android:hint="@string/title_comment"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />


    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginBottom="63dp"
        android:text="@string/title_submit"
        android:textSize="16sp"
        android:textStyle="normal|bold" />


</RelativeLayout>
